# numerical-toolbox-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  .mega-linter.yml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SpaceVectorModulationSimulator.py  release-please-config.json  sonar-project.properties
analysis/: CMakeLists.txt  DiscreteCosineTransform.hpp  FastFourierTransform.hpp  FastFourierTransformRadix2Impl.hpp  FastFourierTransformRadix4Impl.hpp  FrequencyResponse.hpp  PowerDensitySpectrum.hpp  ShortTimeFourierTransform.hpp
analysis/test/: CMakeLists.txt  TestDiscreteCosineTransform.cpp  TestFastFourierTransformRadix2Impl.cpp  TestPowerDensitySpectrum.cpp
controllers/: AutotuneZieglerNichols.hpp  CMakeLists.txt  FieldOrientedController.hpp  Pid.hpp  SpaceVectorModulation.hpp  TransformsClarkePark.hpp
controllers/test/: CMakeLists.txt  TestFieldOrientedController.cpp  TestPid.cpp  TestSpaceVectorModulation.cpp  TestTransformsClarkePark.cpp
controllers/test_doubles/: NormalizedAngles.hpp  Tolerance.hpp
estimators/: CMakeLists.txt  Estimator.hpp  LinearRegression.hpp  YuleWalker.hpp
estimators/test/: CMakeLists.txt  TestLinearRegression.cpp  TestYuleWalker.cpp
examples/analysis/: CMakeLists.txt  FilterFrequencyResponse.cpp
examples/analysis/FastFourierTransform/: CMakeLists.txt  FastFourierTransformRadix2.cpp
examples/analysis/FastFourierTransformRadix2/: CMakeLists.txt  FastFourierTransformRadix2.cpp
examples/analysis/FilterFrequencyResponse/: CMakeLists.txt  FilterFrequencyResponse.cpp
examples/analysis/PowerDensitySpectrumBartlett/: CMakeLists.txt  PowerDensitySpectrumBartlett.cpp
examples/analysis/PowerDensitySpectrumWelch/: CMakeLists.txt  PowerDensitySpectrumWelch.cpp
examples/controllers/: CMakeLists.txt  PSMSMotorController.cpp  Pid.cpp
examples/controllers/TemperatureControllerPid/: CMakeLists.txt  TemperatureController.cpp
examples/controllers/TrajectoryGenerator/: CMakeLists.txt  TrajectoryGenerator.cpp
filters/active/: CMakeLists.txt  KalmanFilter.hpp
filters/active/test/: TestKalmanFilter.cpp
filters/passive/: CMakeLists.txt  Fir.hpp  Iir.hpp
filters/passive/test/: CMakeLists.txt  TestFir.cpp  TestIir.cpp
math/: AdvancedFunctions.hpp  CMakeLists.txt  ComplexNumber.hpp  HyperbolicFunctions.hpp  Matrix.hpp  QNumber.hpp  RecursiveBuffer.hpp  SingleInstructionMultipleData.hpp  Statistics.hpp  Toeplitz.hpp  TrigonometricFunctions.hpp
math/test/: CMakeLists.txt  TestComplexNumber.cpp  TestMatrix.cpp  TestQNumber.cpp  TestRecursiveBuffer.cpp  TestStatistics.cpp  TestToeplitz.cpp
math/test_doubles/: AdvancedFunctionsStub.hpp  CMakeLists.txt  HyperbolicFunctionsStub.hpp  SingleInstructionMultipleDataStub.hpp  TrigonometricFunctionsStub.hpp
numerical/: CMakeLists.txt
numerical/analysis/: CMakeLists.txt  DiscreteCosineTransform.hpp  FastFourierTransform.hpp  FastFourierTransformRadix2Impl.cpp  FastFourierTransformRadix2Impl.hpp  FrequencyResponse.cpp  FrequencyResponse.hpp  PowerDensitySpectrum.cpp  PowerDensitySpectrum.hpp  RootLocus.cpp  RootLocus.hpp
numerical/analysis/test/: CMakeLists.txt  PowerDensitySpectrumTestSupport.hpp  TestDiscreteCosineTransform.cpp  TestFastFourierTransformRadix2Impl.cpp  (+3 more)
numerical/control_analysis/: CMakeLists.txt  FrequencyResponse.cpp  FrequencyResponse.hpp  RootLocus.cpp  RootLocus.hpp
numerical/controllers/: CMakeLists.txt  FieldOrientedController.hpp  Pid.hpp  SpaceVectorModulation.hpp  TrajectoryGenerator.hpp  TrajectoryGeneratorTrapezoidal.hpp  TransformsClarkePark.hpp
numerical/dynamics/: ArticulatedBodyAlgorithm.cpp  ArticulatedBodyAlgorithm.hpp  CMakeLists.txt  EulerLagrangeDynamics.hpp  EulerLagrangeSolver.cpp  EulerLagrangeSolver.hpp  ForwardKinematics.cpp  ForwardKinematics.hpp  NewtonEulerBody.hpp  NewtonEulerSolver.cpp  NewtonEulerSolver.hpp  RecursiveNewtonEuler.cpp  RecursiveNewtonEuler.hpp  RevoluteJointLink.hpp
numerical/estimators/: CMakeLists.txt  Estimator.hpp  LinearRegression.cpp  LinearRegression.hpp  RecursiveLeastSquares.cpp  RecursiveLeastSquares.hpp  YuleWalker.cpp  YuleWalker.hpp
numerical/filters/: CMakeLists.txt
numerical/kinematics/: CMakeLists.txt  ForwardKinematics.cpp  ForwardKinematics.hpp  InverseKinematics.cpp  InverseKinematics.hpp
numerical/math/: AdvancedFunctions.hpp  CMakeLists.txt  CompilerOptimizations.hpp  ComplexNumber.cpp  ComplexNumber.hpp  Geometry3D.hpp  HyperbolicFunctions.hpp  LinearTimeInvariant.cpp  LinearTimeInvariant.hpp  Matrix.cpp  Matrix.hpp  QNumber.cpp  QNumber.hpp  RecursiveBuffer.hpp  SingleInstructionMultipleData.hpp  Statistics.hpp  Toeplitz.hpp  Tolerance.hpp  TrigonometricFunctions.hpp
numerical/neural_network/: CMakeLists.txt
numerical/optimization/: BayesianOptimization.cpp  BayesianOptimization.hpp  BlackBoxObjective.hpp  CMakeLists.txt  GradientDescent.cpp  GradientDescent.hpp  Optimizer.hpp
numerical/optimizers/: BinaryCrossEntropy.hpp  CMakeLists.txt  GradientDescent.hpp  Loss.hpp
numerical/regularization/: CMakeLists.txt  L1.cpp  L1.hpp  L2.cpp  L2.hpp  Regularization.hpp
numerical/solvers/: CMakeLists.txt  CholeskyDecomposition.hpp  DiscreteAlgebraicRiccatiEquation.cpp  DiscreteAlgebraicRiccatiEquation.hpp  DurandKerner.cpp  DurandKerner.hpp  GaussianElimination.cpp  GaussianElimination.hpp  LevinsonDurbin.hpp  Solver.hpp
numerical/windowing/: CMakeLists.txt  Windowing.cpp  Windowing.hpp
optimizers/: CMakeLists.txt  CrossEntropy.hpp  Optimizer.hpp
optimizers/test/: CMakeLists.txt  TestGradientDescent.cpp
simulator/utils/: CMakeLists.txt  SignalGenerator.cpp  SignalGenerator.hpp  TimeSeriesChartWidget.cpp  TimeSeriesChartWidget.hpp  TwiddleFactorsTable.hpp
simulator/widgets/: CMakeLists.txt  ChartInteraction.cpp  ChartInteraction.hpp  FrequencyChartWidget.cpp  FrequencyChartWidget.hpp  SignalConfigWidget.cpp  SignalConfigWidget.hpp  TimeSeriesChartWidget.cpp  TimeSeriesChartWidget.hpp
solvers/: CMakeLists.txt  LevinsonDurbin.hpp  Solver.hpp
solvers/test/: CMakeLists.txt  TestLevinsonDurbin.cpp
(+535 files in other folders)
