add_subdirectory(analysis)
add_subdirectory(control_analysis)
add_subdirectory(controllers)
add_subdirectory(dynamics)
add_subdirectory(estimators)
add_subdirectory(kinematics)
add_subdirectory(filters)
add_subdirectory(math)
add_subdirectory(neural_network)
add_subdirectory(optimization)
add_subdirectory(regularization)
add_subdirectory(solvers)
